tests/NormalTests/paczka1/fuzzy1/13942595.err
Error in line 6: qcpH0GCAS A955 90,8
Error in line 7: YGNhVS9P A955 6,6
Error in line 13: YGNhVS9P A783 66,8
Error in line 24: ryAyLvp S467 79,7
Error in line 25: ryAyLvp A955 62,3
Error in line 23: 6Op A783 153,2
